--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1402,7 +1402,7 @@ a {
 }
 .cid-tOzKWDdz7D .mbr-section-text,
 .cid-tOzKWDdz7D .mbr-section-btn {
-  color: #ffffff;
+  color: #f7f7f7;
   text-align: left;
 }
 .cid-tOzKWDdz7D H5 {
