--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1402,11 +1402,11 @@ a {
 }
 .cid-tOzKWDdz7D .mbr-section-text,
 .cid-tOzKWDdz7D .mbr-section-btn {
-  color: #f7f7f7;
+  color: #000000;
   text-align: left;
 }
 .cid-tOzKWDdz7D H5 {
-  color: #ffffff;
+  color: #000000;
 }
 .cid-uZxkTl4AJs {
   padding-top: 8rem;
