--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -52,7 +52,7 @@ body {
   font-size: 1.25rem;
 }
 .display-7 {
-  font-family: 'Inter Tight', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.3;
 }
@@ -613,7 +613,7 @@ a:hover {
   border-radius: 100px;
 }
 .form-control {
-  font-family: 'Inter Tight', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.3;
   font-weight: 400;
@@ -628,7 +628,7 @@ a:hover {
   border-color: #164fd3 !important;
 }
 .form-control:-webkit-input-placeholder {
-  font-family: 'Inter Tight', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.3;
   font-weight: 400;
